Update packages vulnerabilities and map pasture

--- a/src/server/package.json
+++ b/src/server/package.json
@@ -18,10 +18,14 @@
     "express-socket.io-session": "^1.3.2",
     "express-timeout": "^0.2.1",
     "filewalker": "^0.1.2",
+    "fresh": "^0.5.2",
     "generic-pool": "~2.0.4",
+    "hawk": "^7.0.7",
+    "hoek": "^5.0.4",
     "mongodb": "~2.2.19",
     "mu2": "~0.5.20",
     "multer": "^0.1.8",
+    "node-mime": "^1.0.0",
     "node-schedule": "~1.2.0",
     "request": "~2.58.0",
     "request-param": "^0.2.0",
